--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://github.com/slytherindor/cantnamerepo#readme",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.1.7"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
@@ -43,6 +42,8 @@
     "parcel": "^2.6.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.7.4"
   }
 }
